tools/tests/errors/set_op_non_set_rhs.ki
# Set-algebra operators require a Set on the right-hand side.
var a = {1, 2, 3}
discard a - [1]
